--- a/NETSDL2/NETSDL2.vcxproj
+++ b/NETSDL2/NETSDL2.vcxproj
@@ -129,6 +129,9 @@
     <ClInclude Include="include\internal\StringMarshal.h" />
     <ClInclude Include="include\io\Filesystem.h" />
     <ClInclude Include="include\io\RWops.h" />
+    <ClInclude Include="include\system\Bits.h" />
+    <ClInclude Include="include\system\CPUInfo.h" />
+    <ClInclude Include="include\system\Endian.h" />
     <ClInclude Include="include\system\Platform.h" />
     <ClInclude Include="include\system\SharedObject.h" />
     <ClInclude Include="include\system\Stdinc.h" />
@@ -200,6 +203,9 @@
     <ClCompile Include="src\internal\StringMarshal.cpp" />
     <ClCompile Include="src\io\Filesystem.cpp" />
     <ClCompile Include="src\io\RWops.cpp" />
+    <ClCompile Include="src\system\Bits.cpp" />
+    <ClCompile Include="src\system\CPUInfo.cpp" />
+    <ClCompile Include="src\system\Endian.cpp" />
     <ClCompile Include="src\system\Platform.cpp" />
     <ClCompile Include="src\system\SharedObject.cpp" />
     <ClCompile Include="src\system\Stdinc.cpp" />
