--- a/NETSDL2/NETSDL2.vcxproj.filters
+++ b/NETSDL2/NETSDL2.vcxproj.filters
@@ -226,6 +226,9 @@
     <ClCompile Include="src\core\GUID.cpp">
       <Filter>소스 파일\core</Filter>
     </ClCompile>
+    <ClCompile Include="src\events\GameController.cpp">
+      <Filter>소스 파일\video</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\video\Blend.h">
@@ -449,6 +452,9 @@
     </ClInclude>
     <ClInclude Include="include\core\GUID.h">
       <Filter>헤더 파일\core</Filter>
+    </ClInclude>
+    <ClInclude Include="include\events\GameController.h">
+      <Filter>헤더 파일\events</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
