--- a/NETSDL2Test/NETSDL2Test.csproj
+++ b/NETSDL2Test/NETSDL2Test.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NETSDL2\NETSDL2.vcxproj" />
+    <ProjectReference Include="..\NETSDL2_Image\NETSDL2_Image.vcxproj" />
   </ItemGroup>
 
   <ItemGroup>
