--- a/NETSDL2Test/NETSDL2Test.csproj
+++ b/NETSDL2Test/NETSDL2Test.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\NETSDL2\NETSDL2.vcxproj" />
     <ProjectReference Include="..\NETSDL2_Image\NETSDL2_Image.vcxproj" />
+    <ProjectReference Include="..\NETSDL2_mixer\NETSDL2_mixer.vcxproj" />
   </ItemGroup>
 
   <ItemGroup>
